@@ -13,7 +13,7 @@ increasing the number of clones.
 dc.fit(data, params, model, inits, n.clones, 
 multiply = NULL, unchanged = NULL, 
 update = NULL, updatefun = NULL, initsfun = NULL,
-flavour = c("jags", "bugs"), ...)
+flavour = c("jags", "bugs"), n.chains = 3, ...)
 }
 \arguments{
   \item{data}{
@@ -62,6 +62,9 @@ See Details and Examples.
 }
   \item{flavour}{
   If \code{"jags"}, the function \code{\link{jags.fit}} is called. If \code{"bugs"}, the function \code{\link{bugs.fit}} is called.
+}
+  \item{n.chains}{
+Number of chains to generate.
 }
   \item{\dots}{
   Other values supplied to \code{\link{jags.fit}}, or \code{\link{bugs.fit}}, depending on the \code{flavour} argument.
