@@ -3,6 +3,9 @@ dclone package version history
 Version 1.4-1, September 28, 2011
     * plot.dcdiag: dcdiag colnames from .dcFitwere non standard,
       so plot failed to select columns. Now fixed.
+    * dc.fit and dc.parfit: got n.chains argument for clean
+      handling in parrallel work. (dc.parfit failed with
+      partype="both".)
 
 Version 1.4-0, September 28, 2011
     * Major CRAN release with new parallel features.
